--- a/GroupFundDeployment/war/Homepage.html
+++ b/GroupFundDeployment/war/Homepage.html
@@ -127,7 +127,7 @@ a{
 
 <a href="CustomerProductTable.jsp">PRODUCTS</a>
 <a href="CustomerServiceDeskTable.jsp">SERVICEDESK</a>
-<a href="#">ABOUT US</a>
+<a href="AboutUs.html">ABOUT US</a>
 <span class="space">             </span>
 <div class="dropdown">
   <button class="btn btn-default dropdown-toggle transparent" type="button" data-toggle="dropdown">LOG IN
@@ -136,7 +136,7 @@ a{
     <li><a href="AdminLogIn.html"><b>Administrator</b></a></li>
     <li><a href="BankingOfficerLogIn.html"><b>Banking Officer</b></a></li>
     <li role="presentation" class="divider"></li>
-    <li><a href="CustomerLogIn.html"><b>Customer</b></a></li>
+    <li><a href="CustomerLogIn.jsp"><b>Customer</b></a></li>
   </ul>
 
 </div>
