--- a/GroupFundDeployment/war/AboutUs.html
+++ b/GroupFundDeployment/war/AboutUs.html
@@ -75,50 +75,10 @@ font-size: 17px;
 .black{
 	color: black;
 }
-.sect th,tr{
-	color: #fff;
-	font-weight: bolder;
-}
 .shade{
 	background-color: gray;
 }
 
-@CHARSET "ISO-8859-1";
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 70px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: #000080;
-    padding: 8px 16px;
-    height: 30px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-	color: white;
-    display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    color: blue;
-}
 a{
 	height:20px;
 	position: static;
@@ -128,6 +88,9 @@ position: fixed;
 bottom: 0px;
 text-align: left;
 width: 100%;
+}
+.transparent{
+opacity: 0.8;
 }
   </style>
 </head>
@@ -143,6 +106,8 @@ width: 100%;
      <footer align="right">
      <p>Developed By Abdul and Aditya</p>
      </footer>
+     
+     <a class="btn btn-primary transparent" href="Homepage.html" role="button">Back to HomePage</a>
      </div>
 </body>
 </html>
